force-app/main/default/objects/AttendanceWageTypeInfo__c/AttendanceWageTypeInfo__c.object-meta.xml
<CustomObject>
    <label>AttendanceWageTypeInfo</label>
    <nameField>
        <displayFormat>AWI-{0000}</displayFormat>
        <label>Attendance WageType Info</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AttendanceWageTypeInfo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>