force-app/main/default/objects/AttendanceWageTypeInfo__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to determine Active or inactive(This field was created for NPL MA).</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>