force-app/main/default/objects/AttendanceWageTypeInfo__c/fields/AllowFuture__c.field-meta.xml
<CustomField>
    <fullName>AllowFuture__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Attendance and Wage types that can be entered for future values for that week.</description>
    <label>AllowFuture</label>
    <type>Checkbox</type>
</CustomField>