force-app/main/default/objects/AttendanceWageTypeInfo__c/fields/Areacode__c.field-meta.xml
<CustomField>
    <fullName>Areacode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This value determines the Attendance and Wage type by each Area. If blank then it’s a Global Value.</description>
    <label>Areacode</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>AttendanceWageTypeInfos</relationshipLabel>
    <relationshipName>AttendanceWageTypeInfos</relationshipName>
    <type>Lookup</type>
</CustomField>