force-app/main/default/objects/AttendanceWageTypeInfo__c/fields/AttendenceTypeCode__c.field-meta.xml
<CustomField>
    <fullName>AttendenceTypeCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Attendance Type lookup. Mutually exclusive to Wage Type</description>
    <label>AttendenceTypeCode</label>
    <referenceTo>AttendanceType__c</referenceTo>
    <relationshipLabel>AttendanceWageTypeInfos</relationshipLabel>
    <relationshipName>EmployeeAttendanceTypes</relationshipName>
    <type>Lookup</type>
</CustomField>