force-app/main/default/objects/AttendanceWageTypeInfo__c/fields/ClockEvents__c.field-meta.xml
<CustomField>
    <fullName>ClockEvents__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this Boolean is checked, it means that the Clock Events must match that Attendance and Wage Type.</description>
    <label>ClockEvents</label>
    <type>Checkbox</type>
</CustomField>