force-app/main/default/objects/AttendanceWageTypeInfo__c/fields/HasCheckbox__c.field-meta.xml
<CustomField>
    <fullName>HasCheckbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>These are the Attendance or Wage Type that should appear as Check box while entering the Time.</description>
    <label>HasCheckbox</label>
    <type>Checkbox</type>
</CustomField>