force-app/main/default/objects/AttendanceWageTypeInfo__c/fields/HourlyCraft__c.field-meta.xml
<CustomField>
    <fullName>HourlyCraft__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The Attendance and wage type seen by hourly craft employees
Hourly Craft Employees are identified in Employee Object on below fields - 
- hourlysalaried__c as Hourly
- isCraft = true (on employee object)</description>
    <label>HourlyCraft</label>
    <type>Checkbox</type>
</CustomField>