force-app/main/default/objects/AttendanceWageTypeInfo__c/fields/HourlyNonCraft__c.field-meta.xml
<CustomField>
    <fullName>HourlyNonCraft__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The Attendance and wage type seen by non craft hourly employees. Like Time Adjusters
Hourly Non Craft Employees are identified in Employee Object on below fields -
hourlysalaried__c as Hourly
isCraft = false (managed on employee record)</description>
    <label>HourlyNonCraft</label>
    <type>Checkbox</type>
</CustomField>