force-app/main/default/objects/AttendanceWageTypeInfo__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Add Hours if this is checked(This field was created for NPL MA).</description>
    <label>Hours</label>
    <type>Checkbox</type>
</CustomField>