force-app/main/default/objects/AttendanceWageTypeInfo__c/fields/HoursStep__c.field-meta.xml
<CustomField>
    <fullName>HoursStep__c</fullName>
    <description>Step increment by 0.25 hours. Eg, if a FM enters 9.4 hours, this will be incremented to 9.5 hours.</description>
    <label>HoursStep</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>