force-app/main/default/objects/AttendanceWageTypeInfo__c/fields/IsDuplicate__c.field-meta.xml
<CustomField>
    <fullName>IsDuplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To Identify the duplicate</description>
    <label>IsDuplicate</label>
    <type>Checkbox</type>
</CustomField>