force-app/main/default/objects/AttendanceWageTypeInfo__c/fields/KeyDate__c.field-meta.xml
<CustomField>
    <fullName>KeyDate__c</fullName>
    <description>The Key Date(This field was created for NPL MA).</description>
    <label>KeyDate</label>
    <type>DateTime</type>
</CustomField>