force-app/main/default/objects/AttendanceWageTypeInfo__c/fields/Minutes__c.field-meta.xml
<CustomField>
    <fullName>Minutes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NOT IN USE for Mid America</description>
    <label>Minutes</label>
    <type>Checkbox</type>
</CustomField>