force-app/main/default/objects/AttendanceWageTypeInfo__c/fields/Overtime__c.field-meta.xml
<CustomField>
    <fullName>Overtime__c</fullName>
    <defaultValue>false</defaultValue>
    <description>These Attendance Types and Wage types are calculated for OverTime shown on the screen. This is the red numbers we show on the screen</description>
    <label>Overtime</label>
    <type>Checkbox</type>
</CustomField>