force-app/main/default/objects/AttendanceWageTypeInfo__c/fields/RateOverRide__c.field-meta.xml
<CustomField>
    <fullName>RateOverRide__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If these Booleans are marked as true, then rates are required for those Attendance and Wage Type. (Rate property is used by Attendance Type and Valuation basis is used by Wage Type).</description>
    <label>RateOverRide</label>
    <type>Checkbox</type>
</CustomField>