force-app/main/default/objects/AttendanceWageTypeInfo__c/fields/RegularTime__c.field-meta.xml
<CustomField>
    <fullName>RegularTime__c</fullName>
    <defaultValue>false</defaultValue>
    <description>These are the regaular time hours(This field was created for NPL MA).</description>
    <label>RegularTime</label>
    <type>Checkbox</type>
</CustomField>