force-app/main/default/objects/AttendanceWageTypeInfo__c/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The Attendance and wage type seen by Salary employees
Salaried employees are identified in Employee Object on Field - hourlysalaried__c as Salaried</description>
    <label>Salary</label>
    <type>Checkbox</type>
</CustomField>