force-app/main/default/objects/AttendanceWageTypeInfo__c/fields/TotalHours__c.field-meta.xml
<CustomField>
    <fullName>TotalHours__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NOT IN USE for Mid America</description>
    <label>TotalHours</label>
    <type>Checkbox</type>
</CustomField>