force-app/main/default/objects/AttendanceWageTypeInfo__c/fields/WageTypeCode__c.field-meta.xml
<CustomField>
    <fullName>WageTypeCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Wage Type Lookup. Mutually exclusive to Attendance Type.</description>
    <label>WageTypeCode</label>
    <referenceTo>WageType__c</referenceTo>
    <relationshipLabel>AttendanceWageTypeInfos</relationshipLabel>
    <relationshipName>AttendanceWageTypeInfos</relationshipName>
    <type>Lookup</type>
</CustomField>