force-app/main/default/objects/AttendanceWageTypeInfo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Areacode__c</columns>
    <columns>WageTypeCode__c</columns>
    <columns>AttendenceTypeCode__c</columns>
    <columns>Overtime__c</columns>
    <columns>RegularTime__c</columns>
    <columns>Hours__c</columns>
    <columns>ClockEvents__c</columns>
    <columns>AllowFuture__c</columns>
    <columns>HourlyCraft__c</columns>
    <columns>HourlyNonCraft__c</columns>
    <columns>Salary__c</columns>
    <columns>RateOverRide__c</columns>
    <columns>TotalHours__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>